--- a/Try version2/index.html
+++ b/Try version2/index.html
@@ -24,10 +24,10 @@
   <nav class="navbar">
   <div class="tabs">
     
-      <button type="submit"class="most_watched" >5 Star</button>
+      <button type="submit"class="most_watched" >Top Rated Movies</button>
     
       <button type="submit"class="most_recent">Recents Movies</button>
-      <button type="submit"class="most_popular">Blockbusters</button>
+      <button type="submit"class="most_popular">Blockbusters Movies</button>
   </div>
 </nav>
   <main>
